Fri Dec  4 09:04:34 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * tests/CIAO_ComponentServer/Activator/run_test.pl:
        * tests/CIAO_ComponentServer/Basic/run_test.pl:
          Resolved fuzz errors/warnings.

Fri Dec  4 08:32:42 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * connectors/ami4ccm/examples/Hello/descriptors/run_test.pl:
          Resolved fuzz errors/warnings.

Thu Dec  3 20:12:57 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/tests/CSLDeadline/Sender/CSL_DeadlineTest_Sender_exec.cpp
        * connectors/dds4ccm/tests/CSLQoS/Receiver/CSL_QoSTest_Receiver_exec.cpp
        * connectors/dds4ccm/tests/CSLQoS/Sender/CSL_QoSTest_Sender_exec.cpp
        * connectors/dds4ccm/tests/CSLSampleRejected/Receiver/CSL_SRTest_Receiver_exec.cpp
        * connectors/dds4ccm/tests/CSLSampleRejected/Sender/CSL_SRTest_Sender_exec.cpp
        * connectors/dds4ccm/tests/CSLUnexpStat/Receiver/CSL_USTest_Receiver_exec.cpp
        * connectors/dds4ccm/tests/CSLUnexpStat/Sender/CSL_USTest_Sender_exec.cpp
        * connectors/dds4ccm/tests/On_Inconsistent_Topic/Sender/ConnectorStatusListener_Test_Sender_exec.cpp
          Layout changes

Thu Dec  3 20:08:57 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/impl/ndds/DDS_TopicBase_Connector_T.cpp
        * connectors/dds4ccm/impl/ndds/DomainParticipant.cpp
        * connectors/dds4ccm/impl/ndds/PublisherListener.cpp
        * connectors/dds4ccm/impl/ndds/PublisherListener_T.cpp
        * connectors/dds4ccm/impl/ndds/SubscriberListener.cpp
        * connectors/dds4ccm/impl/ndds/SubscriberListener_T.cpp
          Added a lot of logging and made the subscriberlistener
          working again

Thu Dec  3 20:08:39 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/impl/ndds/DataReaderListener_T.cpp:
          Only returning valid data.

Thu Dec  3 18:46:35 UTC 2009  Marcel Smit  <msmit@remedy.nl>
