@@ -1,3 +1,10 @@
+Fri Dec  4 09:34:09 UTC 2009  Marcel Smit  <msmit@remedy.nl>
+
+        * DAnCE/tests/CIAO/CommandlinePassage/run_test.pl:
+        * tests/CIAO_ComponentServer/Activator/run_test.pl:
+        * tests/IDL_Test/Double_Inherited_Component/run_test.pl:
+          Resolved fuzz errors/warnings.
+
 Fri Dec  4 09:04:34 UTC 2009  Marcel Smit  <msmit@remedy.nl>
 
         * tests/CIAO_ComponentServer/Activator/run_test.pl:
